--- a/release/app/package.json
+++ b/release/app/package.json
@@ -15,6 +15,7 @@
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts"
   },
   "dependencies": {
+    "@grpc/proto-loader": "^0.7.13",
     "primeicons": "^7.0.0"
   }
 }
