--- a/package.json
+++ b/package.json
@@ -96,8 +96,8 @@
     }
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.10.8",
-    "@grpc/proto-loader": "^0.7.13",
+    "@grpc/grpc-js": "1.9.14",
+    "@grpc/proto-loader": "0.7.10",
     "chart.js": "^4.4.3",
     "dhcp": "^0.2.20",
     "electron-debug": "^3.2.0",
