--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
   "dependencies": {
     "@grpc/grpc-js": "1.9.14",
     "@grpc/proto-loader": "0.7.10",
+    "bson": "^6.8.0",
     "chart.js": "^4.4.3",
     "dhcp": "^0.2.20",
     "electron-debug": "^3.2.0",
